--- a/blink_example/SdramSPInst/XuLA2.ucf
+++ b/blink_example/SdramSPInst/XuLA2.ucf
@@ -66,48 +66,48 @@ NET sdData_io<15>  LOC = P11;
 ##############################
 # Flash
 ##############################
-NET usdflashCs_bo  LOC = T8;
-NET flashCs_bo     LOC = T3;
-NET sclk_o         LOC = R11;
-NET mosi_o         LOC = T10;
-NET miso_i         LOC = P10;
+#NET usdflashCs_bo  LOC = T8;
+#NET flashCs_bo     LOC = T3;
+#NET sclk_o         LOC = R11;
+#NET mosi_o         LOC = T10;
+#NET miso_i         LOC = P10;
 
 ##############################
 # Prototyping Header
 ##############################
-NET chanClk_io     LOC = T7;   # L32N
-NET chan_io<0>     LOC = R7;   # L32P
-NET chan_io<1>     LOC = R15;  # L49P
-NET chan_io<2>     LOC = R16;  # L49N
-NET chan_io<3>     LOC = M15;  # L46P
-NET chan_io<4>     LOC = M16;  # L46N
-NET chan_io<5>     LOC = K15;  # L44P
-NET chan_io<6>     LOC = K16;  # L44N
-NET chan_io<7>     LOC = J16;  # L43N
-NET chan_io<8>     LOC = J14;  # L43P
-NET chan_io<9>     LOC = F15;  # L35P
-NET chan_io<10>    LOC = F16;  # L35N
-NET chan_io<11>    LOC = C16;  # L33N
-NET chan_io<12>    LOC = C15;  # L33P
-NET chan_io<13>    LOC = B16;  # L29N
-NET chan_io<14>    LOC = B15;  # L29P
-NET chan_io<15>    LOC = T4;   # L63N (No differential pair!)
-NET chan_io<16>    LOC = R2;   # L32P
-NET chan_io<17>    LOC = R1;   # L32N
-NET chan_io<18>    LOC = M2;   # L35P
-NET chan_io<19>    LOC = M1;   # L35N
-NET chan_io<20>    LOC = K3;   # L42P
-NET chan_io<21>    LOC = J4;   # L42N
-NET chan_io<22>    LOC = H1;   # L39N
-NET chan_io<23>    LOC = H2;   # L39P
-NET chan_io<24>    LOC = F1;   # L41N
-NET chan_io<25>    LOC = F2;   # L41P
-NET chan_io<26>    LOC = E1;   # L46N
-NET chan_io<27>    LOC = E2;   # L46P
-NET chan_io<28>    LOC = C1;   # L50P
-NET chan_io<29>    LOC = B1;   # L50N
-NET chan_io<30>    LOC = B2;   # L52P
-NET chan_io<31>    LOC = A2;   # L52N
+#NET chanClk_io     LOC = T7;   # L32N
+#NET chan_io<0>     LOC = R7;   # L32P
+#NET chan_io<1>     LOC = R15;  # L49P
+#NET chan_io<2>     LOC = R16;  # L49N
+#NET chan_io<3>     LOC = M15;  # L46P
+#NET chan_io<4>     LOC = M16;  # L46N
+#NET chan_io<5>     LOC = K15;  # L44P
+#NET chan_io<6>     LOC = K16;  # L44N
+#NET chan_io<7>     LOC = J16;  # L43N
+#NET chan_io<8>     LOC = J14;  # L43P
+#NET chan_io<9>     LOC = F15;  # L35P
+#NET chan_io<10>    LOC = F16;  # L35N
+#NET chan_io<11>    LOC = C16;  # L33N
+#NET chan_io<12>    LOC = C15;  # L33P
+#NET chan_io<13>    LOC = B16;  # L29N
+#NET chan_io<14>    LOC = B15;  # L29P
+#NET chan_io<15>    LOC = T4;   # L63N (No differential pair!)
+#NET chan_io<16>    LOC = R2;   # L32P
+#NET chan_io<17>    LOC = R1;   # L32N
+#NET chan_io<18>    LOC = M2;   # L35P
+#NET chan_io<19>    LOC = M1;   # L35N
+#NET chan_io<20>    LOC = K3;   # L42P
+#NET chan_io<21>    LOC = J4;   # L42N
+#NET chan_io<22>    LOC = H1;   # L39N
+#NET chan_io<23>    LOC = H2;   # L39P
+#NET chan_io<24>    LOC = F1;   # L41N
+#NET chan_io<25>    LOC = F2;   # L41P
+#NET chan_io<26>    LOC = E1;   # L46N
+#NET chan_io<27>    LOC = E2;   # L46P
+#NET chan_io<28>    LOC = C1;   # L50P
+#NET chan_io<29>    LOC = B1;   # L50N
+#NET chan_io<30>    LOC = B2;   # L52P
+#NET chan_io<31>    LOC = A2;   # L52N
 
 ##############################
 # I/O Drive
@@ -125,11 +125,11 @@ NET sdWe_bo        IOSTANDARD = LVTTL | SLEW=SLOW | DRIVE=6;
 NET sdData_io*     IOSTANDARD = LVTTL | SLEW=SLOW | DRIVE=6;
 NET sdDqmh_o       IOSTANDARD = LVTTL | SLEW=SLOW | DRIVE=6;
 NET sdDqml_o       IOSTANDARD = LVTTL | SLEW=SLOW | DRIVE=6;
-NET usdflashCs_bo  IOSTANDARD = LVTTL;
-NET flashCs_bo     IOSTANDARD = LVTTL;
-NET sclk_o         IOSTANDARD = LVTTL;
-NET mosi_o         IOSTANDARD = LVTTL;
-NET chan*          IOSTANDARD = LVTTL;
+#NET usdflashCs_bo  IOSTANDARD = LVTTL;
+#NET flashCs_bo     IOSTANDARD = LVTTL;
+#NET sclk_o         IOSTANDARD = LVTTL;
+#NET mosi_o         IOSTANDARD = LVTTL;
+#NET chan*          IOSTANDARD = LVTTL;
 
 ##############################
 # Clock Nets
