--- a/jpeg_HostIo/XuLA2.ucf
+++ b/jpeg_HostIo/XuLA2.ucf
@@ -22,46 +22,46 @@ NET fpgaClk_i      LOC = A9;    # 12 MHz clock input.
 ##############################
 # SDRAM
 ##############################
-NET sdCke_o        LOC = J12;
+#NET sdCke_o        LOC = J12;
 NET sdClk_o        LOC = K11;
-NET sdClkFb_i      LOC = K12;
-NET sdCe_bo        LOC = H4;
-NET sdRas_bo       LOC = L4;
-NET sdCas_bo       LOC = L3;
-NET sdWe_bo        LOC = M3;
-NET sdDqml_o       LOC = M4;
-NET sdDqmh_o       LOC = L13;
-NET sdBs_o<0>      LOC = H3;
-NET sdBs_o<1>      LOC = G3;
-NET sdAddr_o<0>    LOC = E4;
-NET sdAddr_o<1>    LOC = E3;
-NET sdAddr_o<2>    LOC = D3;
-NET sdAddr_o<3>    LOC = C3;
-NET sdAddr_o<4>    LOC = B12;
-NET sdAddr_o<5>    LOC = A12;
-NET sdAddr_o<6>    LOC = D12;
-NET sdAddr_o<7>    LOC = E12;
-NET sdAddr_o<8>    LOC = G16;
-NET sdAddr_o<9>    LOC = G12;
-NET sdAddr_o<10>   LOC = F4;
-NET sdAddr_o<11>   LOC = G11;
-NET sdAddr_o<12>   LOC = H13;
-NET sdData_io<0>   LOC = P6;
-NET sdData_io<1>   LOC = T6;
-NET sdData_io<2>   LOC = T5;
-NET sdData_io<3>   LOC = P5;
-NET sdData_io<4>   LOC = R5;
-NET sdData_io<5>   LOC = N5;
-NET sdData_io<6>   LOC = P4;
-NET sdData_io<7>   LOC = N4;
-NET sdData_io<8>   LOC = P12;
-NET sdData_io<9>   LOC = R12;
-NET sdData_io<10>  LOC = T13;
-NET sdData_io<11>  LOC = T14;
-NET sdData_io<12>  LOC = R14;
-NET sdData_io<13>  LOC = T15;
-NET sdData_io<14>  LOC = T12;
-NET sdData_io<15>  LOC = P11;
+#NET sdClkFb_i      LOC = K12;
+#NET sdCe_bo        LOC = H4;
+#NET sdRas_bo       LOC = L4;
+#NET sdCas_bo       LOC = L3;
+#NET sdWe_bo        LOC = M3;
+#NET sdDqml_o       LOC = M4;
+#NET sdDqmh_o       LOC = L13;
+#NET sdBs_o<0>      LOC = H3;
+#NET sdBs_o<1>      LOC = G3;
+#NET sdAddr_o<0>    LOC = E4;
+#NET sdAddr_o<1>    LOC = E3;
+#NET sdAddr_o<2>    LOC = D3;
+#NET sdAddr_o<3>    LOC = C3;
+#NET sdAddr_o<4>    LOC = B12;
+#NET sdAddr_o<5>    LOC = A12;
+#NET sdAddr_o<6>    LOC = D12;
+#NET sdAddr_o<7>    LOC = E12;
+#NET sdAddr_o<8>    LOC = G16;
+#NET sdAddr_o<9>    LOC = G12;
+#NET sdAddr_o<10>   LOC = F4;
+#NET sdAddr_o<11>   LOC = G11;
+#NET sdAddr_o<12>   LOC = H13;
+#NET sdData_io<0>   LOC = P6;
+#NET sdData_io<1>   LOC = T6;
+#NET sdData_io<2>   LOC = T5;
+#NET sdData_io<3>   LOC = P5;
+#NET sdData_io<4>   LOC = R5;
+#NET sdData_io<5>   LOC = N5;
+#NET sdData_io<6>   LOC = P4;
+#NET sdData_io<7>   LOC = N4;
+#NET sdData_io<8>   LOC = P12;
+#NET sdData_io<9>   LOC = R12;
+#NET sdData_io<10>  LOC = T13;
+#NET sdData_io<11>  LOC = T14;
+#NET sdData_io<12>  LOC = R14;
+#NET sdData_io<13>  LOC = T15;
+#NET sdData_io<14>  LOC = T12;
+#NET sdData_io<15>  LOC = P11;
 
 ##############################
 # Flash
@@ -114,17 +114,17 @@ NET sdData_io<15>  LOC = P11;
 ##############################
 NET fpgaClk_i      IOSTANDARD = LVTTL;
 NET sdClk_o        IOSTANDARD = LVTTL | SLEW=FAST | DRIVE=8;
-NET sdClkFb_i      IOSTANDARD = LVTTL;
-net sdCke_o        IOSTANDARD = LVTTL;
-net sdCe_bo        IOSTANDARD = LVTTL;
-NET sdAddr_o*      IOSTANDARD = LVTTL | SLEW=SLOW | DRIVE=6;
-NET sdBs_o*        IOSTANDARD = LVTTL | SLEW=SLOW | DRIVE=6;
-NET sdRas_bo       IOSTANDARD = LVTTL | SLEW=SLOW | DRIVE=6;
-NET sdCas_bo       IOSTANDARD = LVTTL | SLEW=SLOW | DRIVE=6;
-NET sdWe_bo        IOSTANDARD = LVTTL | SLEW=SLOW | DRIVE=6;
-NET sdData_io*     IOSTANDARD = LVTTL | SLEW=SLOW | DRIVE=6;
-NET sdDqmh_o       IOSTANDARD = LVTTL | SLEW=SLOW | DRIVE=6;
-NET sdDqml_o       IOSTANDARD = LVTTL | SLEW=SLOW | DRIVE=6;
+#NET sdClkFb_i      IOSTANDARD = LVTTL;
+#net sdCke_o        IOSTANDARD = LVTTL;
+#net sdCe_bo        IOSTANDARD = LVTTL;
+#NET sdAddr_o*      IOSTANDARD = LVTTL | SLEW=SLOW | DRIVE=6;
+#NET sdBs_o*        IOSTANDARD = LVTTL | SLEW=SLOW | DRIVE=6;
+#NET sdRas_bo       IOSTANDARD = LVTTL | SLEW=SLOW | DRIVE=6;
+#NET sdCas_bo       IOSTANDARD = LVTTL | SLEW=SLOW | DRIVE=6;
+#NET sdWe_bo        IOSTANDARD = LVTTL | SLEW=SLOW | DRIVE=6;
+#NET sdData_io*     IOSTANDARD = LVTTL | SLEW=SLOW | DRIVE=6;
+#NET sdDqmh_o       IOSTANDARD = LVTTL | SLEW=SLOW | DRIVE=6;
+#NET sdDqml_o       IOSTANDARD = LVTTL | SLEW=SLOW | DRIVE=6;
 #NET usdflashCs_bo  IOSTANDARD = LVTTL;
 #NET flashCs_bo     IOSTANDARD = LVTTL;
 #NET sclk_o         IOSTANDARD = LVTTL;
