--- a/xula2_fpga/spi_slave/xilinx/xula2.ucf
+++ b/xula2_fpga/spi_slave/xilinx/xula2.ucf
@@ -3,6 +3,7 @@ NET "miso" LOC = "F1" ;
 NET "led" LOC = "T4" ;
 NET "sck" LOC = "H2" ;
 NET "clock" LOC = "A9" ;
+NET "ss" LOC = "H1" ;
 NET "mosi" LOC = "F2" ;
 #
 NET "clock" TNM_NET = "clock"; 
