--- a/xula2_fpga/spi_slave/xilinx/xula2.ucf
+++ b/xula2_fpga/spi_slave/xilinx/xula2.ucf
@@ -1,10 +1,17 @@
 #
 NET "miso" LOC = "F1" ;
-NET "led" LOC = "T4" ;
-NET "sck" LOC = "H2" ;
+NET "led<0>" LOC = "T4" ;
+NET "led<1>" LOC = "R1" ;
+NET "led<2>" LOC = "M1" ;
+NET "led<3>" LOC = "J4" ;
+NET "led<4>" LOC = "R2" ;
+NET "led<5>" LOC = "M2" ;
+NET "led<6>" LOC = "K3" ;
+NET "led<7>" LOC = "H1" ;
+NET "ss" LOC = "J14" ;
 NET "clock" LOC = "A9" ;
-NET "ss" LOC = "H1" ;
 NET "mosi" LOC = "F2" ;
+NET "sck" LOC = "H2" ;
 #
 NET "clock" TNM_NET = "clock"; 
 TIMESPEC "TS_clock" = PERIOD "clock" 83.3333333 ns HIGH 50%;
