--- a/zipcpu/uart_test_code/Makefile
+++ b/zipcpu/uart_test_code/Makefile
@@ -4,7 +4,7 @@ CROSS   := zip-
 CC      := $(CROSS)gcc
 OBJDUMP := $(CROSS)objdump
 OBJDIR  := obj-zip
-SOURCES := h2.c pushtozipcpu.c clr_sdram.c dwt_process.c pushtorpi2B.c
+SOURCES := h2.c pushtozipcpu.c clr_sdram.c dwt_process.c pushtorpi2B.c pp.c
 OBJECTS := $(addprefix $(OBJDIR)/,$(subst .c,.o,$(SOURCES)))
 HEADERS := $(wildcard *.h)
 # CFLAGS  := -O3 -fdump-tree-all -fdump-rtl-all -Wall -Wextra -nostdlib -fno-builtin
