These were added for 2.0 release adding new qemuvpb.cfg adding to rpi.cfg -Fl/home/pi/ultibo/core/fpc/units/armv6-ultibo/lib/vc4 adding to rpi2.cfg & rpi3.cfg -Fl/home/pi/ultibo/core/fpc/units/armv7-ultibo/lib/vc4

--- a/bare-metal/build_ultibo_RPi/qemuvpb.cfg
+++ b/bare-metal/build_ultibo_RPi/qemuvpb.cfg
@@ -1,5 +1,5 @@
 #
-# Raspberry Pi 3B specific config file
+# QEMU VersatilePB specific config file
 #
 -CfVFPV3
 -CIARM
@@ -9,5 +9,3 @@
 -Fu/home/pi/ultibo/core/fpc/units/armv7-ultibo/rtl
 -Fu/home/pi/ultibo/core/fpc/units/armv7-ultibo/packages
 -Fl/home/pi/ultibo/core/fpc/units/armv7-ultibo/lib
--Fl/home/pi/ultibo/core/fpc/units/armv7-ultibo/lib/vc4
-
