--- a/bare-metal/build_ultibo_RPi/rpi.cfg
+++ b/bare-metal/build_ultibo_RPi/rpi.cfg
@@ -9,4 +9,5 @@
 -Fu/home/pi/ultibo/core/fpc/units/armv6-ultibo/rtl
 -Fu/home/pi/ultibo/core/fpc/units/armv6-ultibo/packages
 -Fl/home/pi/ultibo/core/fpc/units/armv6-ultibo/lib
+-Fl/home/pi/ultibo/core/fpc/units/armv6-ultibo/lib/vc4
 
