--- a/bare-metal/build_ultibo_RPi/rpi2.cfg
+++ b/bare-metal/build_ultibo_RPi/rpi2.cfg
@@ -9,6 +9,7 @@
 -Fu/home/pi/ultibo/core/fpc/units/armv7-ultibo/rtl
 -Fu/home/pi/ultibo/core/fpc/units/armv7-ultibo/packages
 -Fl/home/pi/ultibo/core/fpc/units/armv7-ultibo/lib
+-Fl/home/pi/ultibo/core/fpc/units/armv7-ultibo/lib/vc4
 
 
 
